<resources>
    <!-- App -->
    <string name="app_name">RU Direct</string>
    <string name="bus_stops_activity_name">Bus Stops</string>
    <string name="directions_activity_name">Directions</string>
    <string name="attributions_activity_name">Open Source Licenses</string>
    <string name="settings_name">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>

    <!-- Routes -->
    <string name="all_text">All</string>
    <string name="active_text">Active</string>
    <string name="inactive_text">Inactive</string>

    <!-- Directions -->
    <string name="origin_text">Starting bus stop:</string>
    <string name="destination_text">Destination bus stop:</string>
    <string name="find_route_text">Find route</string>
    <string name="total_time_text">Total time: %1$d minutes</string>
    <string name="directions_textview_error">This is not a valid bus stop!</string>
    <string name="directions_snackbar_error">Please enter a valid bus stop!</string>
    <string name="unable_to_fetch_bus_stops_error">Could not fetch bus stops. Please try again later.</string>
    <string name="same_origin_dest_error">You\'re already at your destination!</string>
    <string name="no_active_buses_error">There are no active buses right now!</string>
    <string name="no_path_error">There isn\'t a path from %1$s to %2$s right now!</string>
    <string name="no_internet_error">No Internet connection. Please try again later.</string>

    <!-- Intents -->
    <string name="bus_tag_message">Bus Tag</string>
    <string name="page_clicked_from_message">Page Clicked From</string>
    <string name="origin_text_message">Origin</string>
    <string name="destination_text_message">Destination</string>

    <!-- Settings -->
    <string name="pref_contributors_title">Contributors</string>
    <string name="team_key">pref_team</string>
    <string name="pref_team_title">RU Direct Team</string>
    <string name="team_message"><b>Richard Chu</b>\nDeveloper/Designer\n\n<b>Kenneth Li</b>\nProduct Manager
        \n\n<b>James Paik</b>\nWeb Developer\n\n<b>Carin Yao</b>\nGraphic Designer</string>
    <string name="pref_other_contributors_title">Other Contributors</string>
    <string name="contributors_key">pref_contributors</string>
    <string name="contributors_message">Revan Sopher</string>
    <string name="special_thanks_key">pref_special_thanks</string>
    <string name="pref_special_thanks_title">Special Thanks</string>
    <string name="special_thanks_message"><b>Andy Le</b>\nFor providing us with moral support and entertainment</string>

    <string name="pref_about_title">About</string>
    <string name="version_key">pref_version</string>
    <string name="open_source_key">pref_open_source</string>
    <string name="open_source_title">The code for RU Direct is open source!</string>
    <string name="open_source_summary">Click here to visit our GitHub!</string>
    <string name="pref_attributions_title">Open Source Licenses</string>
    <string name="attributions_key">pref_attributions</string>

    <!-- Google Analytics -->
    <string name="debug_tracker_id">UA-66536908-1</string>
    <string name="release_tracker_id">UA-66536908-2</string>

    <string name="main_screen">Main-Screen</string>
    <string name="bus_stops_screen">Bus-Stops-Screen</string>
    <string name="directions_screen">Directions-Screen</string>
    <string name="settings_screen">Settings-Screen</string>
    <string name="attributions_screen">Attributions-Screen</string>

    <string name="active_routes_category">Active-Routes-Page</string>
    <string name="directions_selector_category">Directions-Selector-Page</string>
    <string name="all_routes_category">All-Routes-Page</string>
    <string name="route_times_category">Route-Times-Page</string>
    <string name="route_map_category">Route-Map-Page</string>
    <string name="settings_category">Settings-Page</string>

    <string name="view_action">View</string>
    <string name="click_action">Click</string>

    <!-- Error Messages -->
    <string name="no_internet_text">No Internet connection</string>

    <!-- Google Play Services error messages -->
    <string name="common_google_play_services_update_text" msgid="448354684997260580">
        You need Google Play Services in order to view route maps.</string>
    <string name="common_google_play_services_install_text_phone" msgid="2122112764540849864">
        You need Google Play Services in order to view route maps.</string>
    <string name="common_google_play_services_install_text_tablet" msgid="7351599665250191022">
        You need Google Play Services in order to view route maps.</string>
</resources>