<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_contributors_title">
        <Preference
            android:key="@string/team_key"
            android:title="@string/pref_team_title" />
        <Preference
            android:key="@string/contributors_key"
            android:title="@string/pref_other_contributors_title" />
        <Preference
            android:key="@string/special_thanks_key"
            android:title="@string/pref_special_thanks_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference android:key="@string/version_key" />
        <Preference
            android:key="@string/open_source_key"
            android:summary="@string/open_source_summary"
            android:title="@string/open_source_title" />
        <Preference
            android:key="@string/attributions_key"
            android:title="@string/pref_attributions_title" />
    </PreferenceCategory>
</PreferenceScreen>